--- a/literatura.bib
+++ b/literatura.bib
@@ -1,48 +1,18 @@
-% ....názov súboru je: literatura.bib
-% kniha
-@book{Coplien:MPD,
-	author = "James O. Coplien",
-	title = "Multi-Paradigm Design for C++",
-	publisher = "Addison-Wesley",
-	year = 1999
-}
-
-% článok v časopise
-@article{Czarnecki:Staged,
-    author = "Krzysztof Czarnecki and Simon Helsen and Ulrich Eisenecker",
-    title = "Staged Configuration Through Specialization and Multi-Level Configuration of Feature Models",
-    journal = "Software Process: Improvement and Practice",
-    volume = 10,
-    issue = 2,
-    month = apr # "/" # jun,
-    year = "2005",
-    pages = "143--169",
-}
-
-% článok v zborníku
-@inproceedings{Czarnecki:Progress,
-	author = "Krzysztof Czarnecki and Chang Hwan Peter Kim",
-	title = "Cardinality-Based Feature Modeling and Constraints: A Progress Report",
-	booktitle = "International Workshop on Software Factories, OOPSLA 2005",
-	month = oct,
-	year = "2005",
-	address = "San Diego, USA",
-}
-
-% technická správa (nepublikovaná)
-@techreport{Kang:FODA,
-	author = "Kyo C. Kang and Sholom G. Cohen and James A. Hess and William E. Novak and A. Spencer Peterson",
-	title = "Feature-Oriented Domain Analysis ({FODA}): A Feasibility Study",
-	institution = "Software Engineering Institute, Carnegie Mellon University",
-	address = "Pittsburgh, USA",
-	month = nov,
-	year = 1990,
-	number = "CMU/SEI-90-TR-21",
-}
-
 % zdroj na webe
 @misc{PLP-Framework,
-	author = "Software Engineering Institute, Carnegie Mellon University",
-	title = "A Framework for Software Product Line Practice---Version 5.0",
-	howpublished = "\url{http://www.sei.cmu.edu/productlines/frame_report/}",
+	author = "Koike, Arata and Sueda, Yoshiko",
+	title = "Contents Delivery for Autonomous Driving Cars in Conjunction with Car Navigation System", 
+	howpublished = {"https://ieeexplore.ieee.org/document/8893082"},
+} 
+
+
+@misc {Fieldsofapplication,
+howpublished = {"https://www.schaeffler-paravan.de/en/cases/fields-of-application/"}
 }
+
+@misc {Howautonomouscarswork,
+author = "Ján Ondruš, Eduard Kolla, Peter VertaľaŽeljko Šarićc",
+title =  "How Do Autonomous Cars Work?",
+howpublished = {"https://www.sciencedirect.com/science/article/pii/S2352146520300995"}
+}
+
